# local-llm-tester

./: .gitignore  Cargo.toml  commit  commit-summary-openchat.txt  commit.sum.step1.txt  commits.txt  issue.txt  query.txt  readme.MD
src/: data_analyzers.rs  doc_convert.rs  embed.rs  github_data_fetchers.rs  k8s.md  lib.rs  llm.rs  main.rs  preprocess.rs  rag_logic.rs  raw_commit.txt  segmented_text.json  utils.rs
