[package]
name = "local-llm-tester"
version = "0.2.0"
edition = "2021"



[dependencies]
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.25.1", features = ["macros", "rt","rt-multi-thread"] }
anyhow = "1"
serde_json = "1"
urlencoding = "2.1.3"
log = "0.4.19"
base64 = "0.21.2"
derivative = "2.2.0"
chrono = { version = "0.4.26", features = ["serde"] }
tiktoken-rs = "0.2.2"
hyper = "1"
reqwest = "0.11.16"
async-openai = "0.17.1"
octocrab = "0.20.0"
http_req = "0.10.2"
clap = "3"
bytes = "1.5.0"
http-body = "1.0.0"
futures = "0.3.30"
secrecy = "0.8.0"
